--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,59 @@
-baseURL = "http://example.org/"
+baseURL = "https://blog.matthewninja.com"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "matthewninja"
+theme = "noteworthy"
+enableRobotsTXT = true
+paginate = 4 # Set the number of posts to show before overflowing to the next page.
+summaryLength = 10 # Configure how long the post summary should be on the homepage.
+
+[author]
+  name = "matthewninja"
+
+[params]
+  # Main
+  email = "mailto:matthew.ham@ryerson.ca"
+  # youtube = "#"
+  instagram = "https://www.instagram.com/matt.ham/"
+  linkedin = "https://www.linkedin.com/in/matthewninja/"
+
+  # Writing
+  # medium = "#"
+  # blogger = "#"
+  # wordpress = "#"
+
+  # Programming
+  github = "https://github.com/matthewninja"
+  stackoverflow = "https://stackoverflow.com/users/4797767/matthewninja"
+  
+  twitter = "https://twitter.com/matthewninja2"
+
+# Menu links along the sidebar navigation.
+[[menu.main]]
+  identifier = "about"
+  name = "About"
+  url = "/about/"
+  weight = 1 # Weight is an integer used to sort the menu items. The sorting goes from smallest to largest numbers. If weight is not defined for each menu entry, Hugo will sort the entries alphabetically.
+
+
+# Privacy configurations: https://gohugo.io/about/hugo-and-gdpr/
+[privacy]
+  [privacy.disqus]
+    disable = false
+  [privacy.googleAnalytics]
+    anonymizeIP = true
+    disable = false
+    respectDoNotTrack = false
+    useSessionStorage = false
+  [privacy.instagram]
+    disable = false
+    simple = false
+  [privacy.twitter]
+    disable = false
+    enableDNT = false
+    simple = false
+  [privacy.vimeo]
+    disable = false
+    simple = false
+  [privacy.youtube]
+    disable = false
+    privacyEnhanced = true
