--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
 
       # install git
-      - run: apk update && apk add git
+      - run: apt update && apt add git
 
       # checkout the repository
       - checkout
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: install AWS CLI (first install pip, the Python package manager)
           command: |
-            apk add --update python python-dev py-pip build-base
+            apt add --update python python-dev py-pip build-base
             pip install awscli
 
       # build with Hugo
