--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
 
       # install git
-      - run: apt update && apt add git
+      - run: apk update && apk add git
 
       # checkout the repository
       - checkout
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: install AWS CLI (first install pip, the Python package manager)
           command: |
-            apt add --update python python-dev py-pip build-base
+            apk add --update python python-dev py-pip build-base
             pip install awscli
 
       # build with Hugo
@@ -39,7 +39,7 @@ jobs:
           command: |
             if [ "${CIRCLE_BRANCH}" = "master" ]; then
               aws s3 sync $HUGO_BUILD_DIR \
-              s3://blog.matthewninja.com/ --delete
+              s3://blog.matthewninja.com --delete
             else
               echo "Not master branch, dry run only"
             fi
