--- a/config.toml
+++ b/config.toml
@@ -5,12 +5,14 @@ theme = "noteworthy"
 enableRobotsTXT = true
 paginate = 4 # Set the number of posts to show before overflowing to the next page.
 summaryLength = 10 # Configure how long the post summary should be on the homepage.
-# googleAnalytics = "UA-158207054-1"
+googleAnalytics = "UA-158291064-1"
 
 [author]
   name = "matthewninja"
 
 [params]
+  math = true
+  description = "Follow my journey..."
   # Main
   email = "mailto:matthew.ham@ryerson.ca"
   # youtube = "#"
