Finished feb12 post

--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,8 @@ title = "matthewninja"
 theme = "noteworthy"
 enableRobotsTXT = true
 paginate = 4 # Set the number of posts to show before overflowing to the next page.
-summaryLength = 10 # Configure how long the post summary should be on the homepage.
+summaryLength = 20 # Configure how long the post summary should be on the homepage.
+# wrap summary at 20 words
 googleAnalytics = "UA-158291064-1"
 
 [author]
